--- a/MOVIE.html
+++ b/MOVIE.html
@@ -35,6 +35,10 @@
 			figcaption {
 			  margin: 10px 0 0;
 			}
+			figcaption a.caption-link {
+			  text-decoration: none;
+			  color: #fff; 
+			}
 
 
 	</style>
@@ -93,13 +97,7 @@
 						<li><a href=>Digital Products</a> </li>
 					</ul>
 			</li>
-		</ul>
-		
-		<article>
-			
-			<section class="slideshow-container" >
-			</section>
-		</article>	
+		</ul>	
 		
 		<h1>COMINNG SOON</h1>
 		<article style= " height: 70%;">
@@ -172,12 +170,15 @@
 						<img src="FAST X.gif" alt="Fast X">
 						<figcaption> Fast X</figcaption>
 					</figure>
-
 					<figure>
+					  <a href="MOVIE 1.html">
 						<img src="THE SCHOOL FOR GOOD AND AND EVIL.gif" alt="The School for good and Evil">
-						<figcaption> The School for Good and Evil </figcaption>
-					</figure>	
-					
+						<figcaption>
+						  <a href="MOVIE 1.html" class="caption-link"> The School for Good and Evil</a>
+						</figcaption>
+					  </a>
+					</figure>
+			
 					<figure>
 						<img src="INCEPTION.gif"alt="Inception">
 						<figcaption> Inception </figcaption>
