--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					</figure>
 					
 					<figure>
-						<img src=alt="Kong vs Godzilla.gif">
+						<img src="kong vs godzilla.gif" alt="kong vs godzilla.gif">
 						<figcaption> Kong and Godzilla </figcaption>	
 					</figure>
 		</article>
