--- a/SHOP.html
+++ b/SHOP.html
@@ -133,8 +133,7 @@
 			<li>
 				<a href="SHOP.html">SHOP</a>
 					<ul class="submenu">
-						<li><a href=>New Arrivals</a> </li>
-						<li><a href=>Collectables</a> </li>
+						<li><a href="COLLECTABLES.html">Collectables</a> </li>
 						<li><a href=>Toys</a> </li>
 						<li><a href=>Digital Products</a> </li>
 					</ul>
