--- a/MOVIE FEATURED.html
+++ b/MOVIE FEATURED.html
@@ -214,7 +214,7 @@
 					</figure>
 					
 					<figure>
-						<img src="ASSIGNMENT\D5THEDISSTERARTIST.jpg" alt="The Disaster Artist">
+						<img src="D5THEDISSTERARTIST.jpg" alt="The Disaster Artist">
 						<figcaption> The Disaster Artist </figcaption>
 					</figure>
 					
